--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-.env
+# Local development environment overrides
+/local.nix
 
-.DS_STORE
+#Task
+/.task
+/Taskfile.yaml
+/Taskfile.yml
 
-.idea/
+# Misc
+.DS_Store
+.todo
 
-emishows-db/docs/site/
+# Data
+/data
