--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,29 @@
-**
-!emishows-db/start.sh
-!emishows-db/init/
+#Task
+/.task
+/Taskfile.yaml
+/Taskfile.yml
+
+# Misc
+.DS_Store
+.todo
+
+# Data
+/data
+
+# Tracked, but not needed
+.devcontainer
+.github
+.trunk
+.vscode
+docs
+.copier-answers.yaml
+.dockerignore
+.envrc
+.gitattributes
+.gitignore
+CONTRIBUTING.md
+docker-compose.yaml
+Dockerfile
+LICENSE
+README.md
+Taskfile.dist.yaml
