--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,18 @@
----
 services:
   emishows-db:
-    build: .
+    build:
+      context: ./
+      network: host
     network_mode: host
     environment:
+      - "EMISHOWS_DB_HOST=${EMISHOWS_DB_HOST:-0.0.0.0}"
       - "EMISHOWS_DB_SQL_PORT=${EMISHOWS_DB_SQL_PORT:-34000}"
       - "EMISHOWS_DB_HTTP_PORT=${EMISHOWS_DB_HTTP_PORT:-34001}"
       - "EMISHOWS_DB_RPC_PORT=${EMISHOWS_DB_RPC_PORT:-34002}"
       - "EMISHOWS_DB_ROOT_PASSWORD=${EMISHOWS_DB_ROOT_PASSWORD:-password}"
       - "EMISHOWS_DB_PASSWORD=${EMISHOWS_DB_PASSWORD:-password}"
     volumes:
-      - data:/app/data
+      - data:/app/data/
 
 volumes:
   data: {}
