--- a/.copier-answers.yaml
+++ b/.copier-answers.yaml
@@ -1,14 +1,17 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 0.5.1
-_src_path: gh:radio-aktywne/template-app-generic
+_commit: 0.1.0
+_src_path: gh:radio-aktywne/template-database-cockroach
 accountname: radio-aktywne
-appname: emishows-db
+databasename: emishows-db
 description: Emission shows database 🎭💾
 docs: true
-docsurl: https://radio-aktywne.github.io/app-emishows-db
+docsurl: https://radio-aktywne.github.io/database-emishows-db
 envprefix: EMISHOWS_DB
-imagename: apps/emishows-db
+httpport: 34001
+imagename: databases/emishows-db
 registry: true
 releases: true
-reponame: app-emishows-db
-repourl: https://github.com/radio-aktywne/app-emishows-db
+reponame: database-emishows-db
+repourl: https://github.com/radio-aktywne/database-emishows-db
+rpcport: 34002
+sqlport: 34000
