Fetched template changes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,12 @@ services:
       context: ./
       network: host
     environment:
-      - "EMISHOWS_DB_HOST=${EMISHOWS_DB_HOST:-0.0.0.0}"
-      - "EMISHOWS_DB_SQL_PORT=${EMISHOWS_DB_SQL_PORT:-34000}"
-      - "EMISHOWS_DB_HTTP_PORT=${EMISHOWS_DB_HTTP_PORT:-34001}"
-      - "EMISHOWS_DB_RPC_PORT=${EMISHOWS_DB_RPC_PORT:-34002}"
-      - "EMISHOWS_DB_ROOT_PASSWORD=${EMISHOWS_DB_ROOT_PASSWORD:-password}"
-      - "EMISHOWS_DB_PASSWORD=${EMISHOWS_DB_PASSWORD:-password}"
+      - "EMISHOWS_DB__SERVER__HOST=${EMISHOWS_DB__SERVER__HOST:-0.0.0.0}"
+      - "EMISHOWS_DB__SERVER__PORTS__SQL=${EMISHOWS_DB__SERVER__PORTS__SQL:-34000}"
+      - "EMISHOWS_DB__SERVER__PORTS__HTTP=${EMISHOWS_DB__SERVER__PORTS__HTTP:-34001}"
+      - "EMISHOWS_DB__SERVER__PORTS__RPC=${EMISHOWS_DB__SERVER__PORTS__RPC:-34002}"
+      - "EMISHOWS_DB__CREDENTIALS__ROOT__PASSWORD=${EMISHOWS_DB__CREDENTIALS__ROOT__PASSWORD:-password}"
+      - "EMISHOWS_DB__CREDENTIALS__USER__PASSWORD=${EMISHOWS_DB__CREDENTIALS__USER__PASSWORD:-password}"
     network_mode: host
     volumes:
       - data:/database/data/
