--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 services:
-  emishows-db:
+  datashows:
     build:
       context: ./
       network: host
     environment:
-      - "EMISHOWS_DB__SERVER__HOST=${EMISHOWS_DB__SERVER__HOST:-0.0.0.0}"
-      - "EMISHOWS_DB__SERVER__PORTS__SQL=${EMISHOWS_DB__SERVER__PORTS__SQL:-34000}"
-      - "EMISHOWS_DB__SERVER__PORTS__HTTP=${EMISHOWS_DB__SERVER__PORTS__HTTP:-34001}"
-      - "EMISHOWS_DB__SERVER__PORTS__RPC=${EMISHOWS_DB__SERVER__PORTS__RPC:-34002}"
-      - "EMISHOWS_DB__CREDENTIALS__ROOT__PASSWORD=${EMISHOWS_DB__CREDENTIALS__ROOT__PASSWORD:-password}"
-      - "EMISHOWS_DB__CREDENTIALS__USER__PASSWORD=${EMISHOWS_DB__CREDENTIALS__USER__PASSWORD:-password}"
+      - "DATASHOWS__SERVER__HOST=${DATASHOWS__SERVER__HOST:-0.0.0.0}"
+      - "DATASHOWS__SERVER__PORTS__SQL=${DATASHOWS__SERVER__PORTS__SQL:-34000}"
+      - "DATASHOWS__SERVER__PORTS__HTTP=${DATASHOWS__SERVER__PORTS__HTTP:-34001}"
+      - "DATASHOWS__SERVER__PORTS__RPC=${DATASHOWS__SERVER__PORTS__RPC:-34002}"
+      - "DATASHOWS__CREDENTIALS__ROOT__PASSWORD=${DATASHOWS__CREDENTIALS__ROOT__PASSWORD:-password}"
+      - "DATASHOWS__CREDENTIALS__USER__PASSWORD=${DATASHOWS__CREDENTIALS__USER__PASSWORD:-password}"
     network_mode: host
     privileged: true
     volumes:
