--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 services:
-  datashows:
+  sapphire:
     build:
       context: ./
       network: host
     environment:
-      - "DATASHOWS__SERVER__HOST=${DATASHOWS__SERVER__HOST:-0.0.0.0}"
-      - "DATASHOWS__SERVER__PORTS__SQL=${DATASHOWS__SERVER__PORTS__SQL:-34000}"
-      - "DATASHOWS__SERVER__PORTS__HTTP=${DATASHOWS__SERVER__PORTS__HTTP:-34001}"
-      - "DATASHOWS__SERVER__PORTS__RPC=${DATASHOWS__SERVER__PORTS__RPC:-34002}"
-      - "DATASHOWS__CREDENTIALS__ROOT__PASSWORD=${DATASHOWS__CREDENTIALS__ROOT__PASSWORD:-password}"
-      - "DATASHOWS__CREDENTIALS__USER__PASSWORD=${DATASHOWS__CREDENTIALS__USER__PASSWORD:-password}"
+      - "SAPPHIRE__SERVER__HOST=${SAPPHIRE__SERVER__HOST:-0.0.0.0}"
+      - "SAPPHIRE__SERVER__PORTS__SQL=${SAPPHIRE__SERVER__PORTS__SQL:-34000}"
+      - "SAPPHIRE__SERVER__PORTS__HTTP=${SAPPHIRE__SERVER__PORTS__HTTP:-34001}"
+      - "SAPPHIRE__SERVER__PORTS__RPC=${SAPPHIRE__SERVER__PORTS__RPC:-34002}"
+      - "SAPPHIRE__CREDENTIALS__ROOT__PASSWORD=${SAPPHIRE__CREDENTIALS__ROOT__PASSWORD:-password}"
+      - "SAPPHIRE__CREDENTIALS__USER__PASSWORD=${SAPPHIRE__CREDENTIALS__USER__PASSWORD:-password}"
     network_mode: host
     privileged: true
     volumes:
