--- a/.copier-answers.yaml
+++ b/.copier-answers.yaml
@@ -1,9 +1,9 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 0.1.0
+_commit: 0.2.0
 _src_path: gh:radio-aktywne/template-database-postgres
 accountname: radio-aktywne
 databasename: sapphire
-description: Broadcast shows data 🎭
+description: Broadcast shows database 🎭
 docs: true
 docsurl: https://radio-aktywne.github.io/sapphire
 envprefix: SAPPHIRE
